tests/snapshots/snapshot_test__category_rename.snap
---
source: tests/snapshot_test.rs
assertion_line: 177
expression: output
---
 rink  [Sort: Name]  6 sessions  *work ?wait +done
                                                  
──────────────────────────────────────────────────
 ▾ personal (2)                                   
   ○ blog                                         
   ○ dotfiles                                     
 ▾ work (3)                                       
   ● api *                                        
   ○ db   ┌ Rename Category ───────────┐          
   ○ front│                            │          
 ▾ General│ personaldev█               │          
 Preview ─└────────────────────────────┘──────────
(no session selected)                             
                                                  
                                                  
                                                  
                                                  
                                                  
──────────────────────────────────────────────────
 Enter  confirm   Esc  cancel
