tests/snapshots/snapshot_test__normal_view.snap
---
source: tests/snapshot_test.rs
assertion_line: 90
expression: output
---
 rink  [Sort: Name]  6 sessions  *work ?wait +done
                                                  
──────────────────────────────────────────────────
 ▾ personal (2)                                   
   ○ blog                                         
   ○ dotfiles                                     
 ▾ work (3)                                       
   ● api                                          
   ○ db                                           
   ○ frontend                                     
 ▾ General (1)                                    
 Preview ─────────────────────────────────────────
(no session selected)                             
                                                  
                                                  
                                                  
                                                  
                                                  
──────────────────────────────────────────────────
 ↑↓  nav   Enter  switch   /  search   c  create
