tests/snapshots/snapshot_test__selected_session.snap
---
source: tests/snapshot_test.rs
assertion_line: 153
expression: output
---
 rink  [Sort: Name]  6 sessions  *work ?wait +done
                                                  
──────────────────────────────────────────────────
 ▾ personal (2)                                   
   ○ blog                                         
   ○ dotfiles                                     
 ▾ work (3)                                       
   ● api *                                        
   ○ db                                           
   ○ frontend                                     
 ▾ General (1)                                    
 Preview ─────────────────────────────────────────
(no preview)                                      
                                                  
                                                  
                                                  
                                                  
                                                  
──────────────────────────────────────────────────
 ↑↓  nav   Enter  switch   /  search   c  create
